// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Anchor /> should match snapshot 1`] = `
<div>
  <a
    class="e-link"
    href="#"
  >
    a standard link
  </a>
</div>
`;

exports[`<Anchor /> should match target blank snapshot 1`] = `
<div>
  <a
    class="e-link"
    href="#"
    rel="noopener noreferrer"
    target="_blank"
  >
    a standard link
  </a>
</div>
`;
